<resources>
    <string name="app_name">RecipePal</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_cookbooks">Cookbooks</string>
    <string name="title_grocery_list">Grocery List</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="ingredients_added">Ingredients have been added to Grocery List.</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="total_time">\u0020total time</string>
    <string name="total_servings">\u0020total servings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_recipe_message">Are you sure you want to delete the selected recipe(s)?</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="delete_ingredient_message">Are you sure you want to delete the selected ingredients(s)?</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="delete_instruction_message">Are you sure you want to delete the selected instructions(s)?</string>
    <string name="delete_instruction">Delete Instructions</string>
    <string name="step">Step #:</string>
    <string name="content">Content:</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">name</string>
    <string name="add_grocery">Add Grocery</string>
    <string name="add_grocery_name_hint">Name</string>
    <string name="add_grocery_quantity">Quantity</string>
    <string name="delete_grocery">Delete Grocery Item</string>
    <string name="delete_grocery_message">Are you sure you want to delete the selected grocery item(s)?</string>
    <string name="start_recipe">Start Recipe</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="minutes">minutes</string>
</resources>
