<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activities.RecipeInfoActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:divider="?android:dividerHorizontal">

<GridLayout
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="10dp">

    <EditText
        android:id="@+id/recipeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Recipe Name"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:textColor="@color/edit_text_color"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="Start Recipe"
        android:layout_columnSpan="2"
        android:enabled="false"
        android:onClick="startRecipeButtonOnClick"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/totalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textColor="@color/edit_text_color"
        android:hint="@string/total_time"
        android:layout_marginLeft="70dp"
        android:drawableLeft="@drawable/ic_access_time_24dp"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/servingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textColor="@color/edit_text_color"
        android:hint="@string/total_servings"
        android:layout_marginLeft="70dp"
        android:drawableLeft="@drawable/ic_pie_chart_outlined_24dp"
        android:textSize="15dp"/>

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textSize="16dp"
        android:layout_columnSpan="1"
        android:text="@string/ingredients" />

    <Button
        android:id="@+id/addIngredientsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center|end"
        android:onClick="addIngredientButtonOnClick"
        android:background="@null"
        android:textColor="@color/colorPrimaryDark"
        android:drawableRight="@drawable/ic_add_24dp" />

    <ListView
        android:id="@+id/ingredientsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnSpan="2"
        android:minHeight="?android:attr/listPreferredItemHeight"/>

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:textSize="16dp"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/addInstructionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center|end"
        android:onClick="addInstructionButtonOnClick"
        android:background="@null"
        android:textColor="@color/colorPrimaryDark"
        android:drawableRight="@drawable/ic_add_24dp" />

    <ListView
        android:id="@+id/instructionsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnSpan="2"
        android:minHeight="?android:attr/listPreferredItemHeight"/>

</GridLayout>
</ScrollView>